--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ _site
 .sass-cache
 .jekyll-cache
 .jekyll-metadata
-*.xml
 vendor
-_notebooks/.ipynb_checkpoints
+*.ipynb_checkpoints
 # Local Netlify folder
 .netlify
 .tweet-cache
 __pycache__
+desktop.ini
