--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: ronaldo.tech
 description: O hábito que faz o monge... e todos nós.
 github_username: ronaldokun
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "blog"
+github_repo: "ronaldo.tech"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
